--- a/src/App.css
+++ b/src/App.css
@@ -102,3 +102,10 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
 }
+
+#joined{
+  background-color: #3176a7;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+}
