added oauth authentication

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,12 @@
 .App-link {
   color: #61dafb;
 }
+.appcontainer{
+  text-align: center;
+}
+.login{
+  margin-top:12%;
+}
 
 @keyframes App-logo-spin {
   from {
